log
Fri 09 Sep 2022 05:03:54 PM UTC: 
 hashmap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:70:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘}’ token
   70 | }
      | ^
Compilation failed
70b7550
Fri 09 Sep 2022 05:04:07 PM UTC: 
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:70:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘}’ token
   70 | }
      | ^
Compilation failed
664269d
Fri 09 Sep 2022 05:04:15 PM UTC: 
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:70:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘}’ token
   70 | }
      | ^
Compilation failed
e193f8b
Fri 09 Sep 2022 05:13:57 PM UTC: 
 hashmap.c | 20 ++++++++++++++++----
 1 file changed, 16 insertions(+), 4 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:48:23: error: statement with no effect [-Werror=unused-value]
   48 |       map->buckets[i] == newPair;
      |       ~~~~~~~~~~~~~~~~^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a9317a6
Fri 09 Sep 2022 05:14:33 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
ce065dc
Fri 09 Sep 2022 05:25:54 PM UTC: 
 hashmap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  8|3
total_score: 40/70
c06a51c
Fri 09 Sep 2022 05:35:52 PM UTC: 
 hashmap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  11|2
total_score: 50/70
777ab26
